<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="40dp"
    tools:context=".ui.dashboard.DashboardFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:scaleType="fitCenter"
                android:src="@drawable/logobrain" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/reminder_name"
                android:textAlignment="center"
                android:textColor="@color/dusty_rose" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/when"
                android:textAlignment="center"
                android:textColor="@color/dusty_rose" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="0">

                <TableRow
                    android:layout_width="50dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="78dp"
                        android:layout_height="wrap_content"
                        android:text="@string/m"
                        android:textSize="20sp" />


                    <CheckBox
                        android:id="@+id/monday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp" />

                </TableRow>

                <TableRow
                    android:layout_width="50dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tu"
                        android:textSize="20sp" />


                    <CheckBox
                        android:id="@+id/tuesday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp" />

                </TableRow>

                <TableRow
                    android:layout_width="50dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/w"
                        android:textSize="20sp" />


                    <CheckBox
                        android:id="@+id/wednesday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp" />

                </TableRow>

                <TableRow
                    android:layout_width="50dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/th"
                        android:textSize="20sp" />


                    <CheckBox
                        android:id="@+id/thursday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp" />

                </TableRow>

                <TableRow
                    android:layout_width="50dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/f"
                        android:textSize="20sp" />


                    <CheckBox
                        android:id="@+id/friday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp" />

                </TableRow>

                <TableRow
                    android:layout_width="50dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sa"
                        android:textSize="20sp" />


                    <CheckBox
                        android:id="@+id/saturday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp" />

                </TableRow>

                <TableRow
                    android:layout_width="50dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/s"
                        android:textSize="20sp" />


                    <CheckBox
                        android:id="@+id/sunday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp" />

                </TableRow>


            </TableLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/time"
                android:textAlignment="center"
                android:textColor="@color/dusty_rose" />

            <EditText
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

            <Button
                android:id="@+id/done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/dusty_rose"
                android:text="@string/done" />


        </LinearLayout>


    </ScrollView>


</LinearLayout>